changes to gradle wrapper update script